# moodle_tests

./: .gitignore  .travis.yml  README.md  allure.sh  conftest.py  pyproject.toml  pytest.ini  requirements.txt
common/: constants.py
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 18af572213e8ba90.txt  1a07470af049c6c8.txt  1a153bfad1bd052b.txt  1c822227aeca00f7.txt  1cbb20940443c5ea.txt  2186cef48eb7865f.txt  28ed6a231a66026d.txt  364c2ec9040d64fc.txt  3a0c1f28a8785178.txt  3ae4a883004c1a14.txt  3e08c9f9f041f635.txt  44663c6eece82b94.txt  45f1a493303b94f6.txt  4e7a14e451e2bf5c.txt  54d2bbd67b03bb56.txt  60ccba453eda0239.txt  744865064153da2.txt  7d6b20be94640a61.txt  7dd69c5d7e2174b4.txt  86fdfa642244442d.txt  8995e8b4cd5788ef.txt  918855b527467d95.txt  939812d76367d501.txt  a4455fbc17c87ef5.txt  adda4c939ae3f075.txt  b60b39ab929b9c95.txt  b68763bdd0e8b2a3.txt  bb3b39c33f4ed1b1.txt  bdf65a09dc6ae936.txt  c08207cd6bebb13e.txt  c336579f20195916.txt  c734815d920f64b8.txt  ca69a459eb343cd9.txt  cc65028309b0611c.txt  d075e6cced2c7370.txt  d5794beacbd06db.txt  db393c3a262bee4e.txt  dcc10841fe1fcb83.txt  (+6 more)
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
locators/: auth.py  course_page_locators.py  login_page_locators.py  user_page_locators.py
models/: course.py  profile.py
pages/: application.py  base_page.py  course_page.py  login_page.py  user_page.py
widgets/: duration-trend.json  duration.json  severity.json  status-chart.json  suites.json  summary.json
(+49 files in other folders)
