[tool.poetry]
name = "moodle_tests"
version = "0.1.0"
description = "Tests Moodle site"
authors = ["grsln <grsln@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
webdriver-manager = "^3.4.2"
flake8 = "^3.9.2"
black = "^21.7b0"
pre-commit = "^2.14.0"
allure-pytest = "^2.9.43"
pytest = "^6.2.5"
Faker = "^8.13.2"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
